Style fourth element

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -8,6 +8,11 @@
   font-size: 36px;
 }
 
-.bigger-font {
+.bigger-font, #fourth {
   font-size: 24px;
+}
+
+#fourth {
+  background-color: hsl(120, 64%, 68%);
+  font-weight: bold;
 }
