--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,6 +3,8 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  /* below this is what I modified */
+  display: flex;
 }
 
 .box {
@@ -12,4 +14,6 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  /* below this is what I modified */
+  margin: auto;
 }
