Modify solution to exercise
I used margin: auto to center the div, but I think the given solution of
using align-items: center and justify-content: center is better. It
doesn't add any margins to the div and explicitly uses flex properties.

--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -5,6 +5,8 @@
   height: 300px;
   /* below this is what I modified */
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
@@ -14,6 +16,4 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
-  /* below this is what I modified */
-  margin: auto;
 }
