--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  
+  display: flex;
 }
 
 .logo {
@@ -14,6 +16,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 a {
