Make link containers flex containers

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -29,3 +29,8 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.left-links, .right-links {
+  display: flex;
+  align-items: center;
+}
