Add flex containers

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -26,3 +26,12 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.card-container {
+  display: flex;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
