--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,6 +12,7 @@ img {
   font-weight: 900;
 
   text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -30,12 +31,14 @@ img {
 .card-container {
   display: flex;
   justify-content: center;
+  gap: 52px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 8px;
 }
 
 .text {
