--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,8 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 
   display: flex;
+  padding: 16px;
+  gap: 16px;
 }
 
 .icon {
@@ -72,9 +74,14 @@ button.cancel {
   color: royalblue;
 }
 
+
 .header {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
   font-weight: bold;
+}
+
+.text {
+  margin: 12px 0;
 }
