--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -78,6 +78,7 @@ button.cancel {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
   font-weight: bold;
 }
