--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,15 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+ul {
+  list-style: none; /* li elements inherit this and lose bullet point */
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: dimgray;
+}
