--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -34,9 +34,17 @@ ul {
   list-style: none; /* li elements inherit this and lose bullet point */
   padding: 0;
   margin: 0;
+  display: flex;
+  gap: 16px;
 }
 
 a {
   text-decoration: none;
   color: dimgray;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
 }
