--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -45,7 +45,7 @@ a {
   color: dimgray;
 }
 
-.header {
+.header, .footer {
   display: flex;
   justify-content: space-between;
   padding: 16px;
@@ -56,4 +56,8 @@ a {
   flex-direction: column;
   align-items: center;
   gap: 16px;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
