--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -42,6 +42,10 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  width: 300px;
+  height: 300px;
+  padding: 16px;
 }
 
 
@@ -64,4 +68,11 @@ a {
   text-decoration: none;
   color: white;
   font-size: 24px;
+}
+
+.card-container {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
 }
